@@ -1,5 +1,10 @@
 2009-07-08	Joel Sherrill <joel.sherrill@OARcorp.com>
 
+	* rtems/src/semcreate.c: Restructure to simplify and improve ability to
+	anlize this routine for coverage.
+
+2009-07-08	Joel Sherrill <joel.sherrill@OARcorp.com>
+
 	* score/src/objectgetinfo.c: Clean up and eliminate unreachable code.
 
 2009-07-07	Joel Sherrill <joel.sherrill@oarcorp.com>
